retrieveUnpackaged/objects/Attendance__c.object
<CustomObject>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Attendance</relationshipLabel>
        <relationshipName>Attendance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Present__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Present</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Absent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leave</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Teacher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Teacher</label>
        <referenceTo>Teacher__c</referenceTo>
        <relationshipLabel>Attendance</relationshipLabel>
        <relationshipName>Attendance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Attendance</relationshipLabel>
        <relationshipName>Attendance</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Attendance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00}</displayFormat>
        <label>Attendance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>